fixed project imgs not loading, spacing in styling

--- a/public/style/base.css
+++ b/public/style/base.css
@@ -108,7 +108,17 @@ ul li {
   height: auto;
   border-radius: 10%;
 }
-
+.project-box{
+  text-align: center;
+  padding: 20px;
+  margin-top: 100px;
+}
+.project-box img{
+  max-width: 100%;
+  width: 200px;
+  height: auto;
+  margin-bottom: 20px;
+}
 @media screen and (min-width: 420px) {
    .fa.fa-bars {
      display: none;
